Added cached stats page

--- a/.env.dist
+++ b/.env.dist
@@ -9,3 +9,4 @@ FEDISEARCH_REATTEMPT_MINUTES='60'
 FEDISEARCH_REFRESH_HOURS='120'
 FEDISEARCH_WAIT_FOR_JOB_MINUTES='60'
 FEDISEARCH_DEFAULT_TIMEOUT_MILLISECONDS='10000'
+FEDISEARCH_STATS_CACHE_MINUTES='60'
