--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - 'POSTGRES_URL=postgresql://${FEDISEARCH_POSTGRES_USER}:${FEDISEARCH_POSTGRES_PASSWORD}@postgres:5432/${FEDISEARCH_POSTGRES_USER}?schema=public'
       - 'MATOMO_URL=${FEDISEARCH_MATOMO_URL}'
       - 'MATOMO_SITE_ID=${FEDISEARCH_MATOMO_SITE_ID}'
+      - 'STATS_CACHE_MINUTES=${FEDISEARCH_STATS_CACHE_MINUTES}'
       - 'TZ=${FEDISEARCH_TIMEZONE}'
     networks:
       fedisearch:
