Added crawling depth limit

--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,5 @@ FEDISEARCH_DEFAULT_TIMEOUT_MILLISECONDS='10000'
 FEDISEARCH_STATS_CACHE_MINUTES='60'
 FEDISEARCH_ELASTIC_PASSWORD=
 FEDISEARCH_BANNED_DOMAINS=
+FEDISEARCH_MAX_CRAWLING_DEPTH=
+FEDISEARCH_CRAWLING_VERSION=0
