--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - 'ELASTIC_URL=http://elastic:9200'
       - 'ELASTIC_PASSWORD=${FEDISEARCH_ELASTIC_PASSWORD}'
       - 'BANNED_DOMAINS=${FEDISEARCH_BANNED_DOMAINS}'
+      - 'MAX_CRAWLING_DEPTH=${FEDISEARCH_MAX_CRAWLING_DEPTH}'
+      - 'CRAWLING_VERSION=${FEDISEARCH_CRAWLING_VERSION}'
     networks:
       fedisearch:
     logging: *default-logging
