Added config for seed domain timeout

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,7 @@ FEDISEARCH_REATTEMPT_MINUTES='60'
 FEDISEARCH_REFRESH_HOURS='120'
 FEDISEARCH_WAIT_FOR_JOB_MINUTES='60'
 FEDISEARCH_DEFAULT_TIMEOUT_MILLISECONDS='10000'
+FEDISEARCH_SEED_TIMEOUT_MILLISECONDS='60000'
 FEDISEARCH_STATS_CACHE_MINUTES='60'
 FEDISEARCH_ELASTIC_PASSWORD=
 FEDISEARCH_BANNED_DOMAINS=
