--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - 'REFRESH_HOURS=${FEDISEARCH_REFRESH_HOURS}'
       - 'WAIT_FOR_JOB_MINUTES=${FEDISEARCH_WAIT_FOR_JOB_MINUTES}'
       - 'DEFAULT_TIMEOUT_MILLISECONDS=${FEDISEARCH_DEFAULT_TIMEOUT_MILLISECONDS}'
+      - 'SEED_TIMEOUT_MILLISECONDS=${FEDISEARCH_SEED_TIMEOUT_MILLISECONDS}'
       - 'ELASTIC_URL=http://elastic:9200'
       - 'ELASTIC_PASSWORD=${FEDISEARCH_ELASTIC_PASSWORD}'
       - 'BANNED_DOMAINS=${FEDISEARCH_BANNED_DOMAINS}'
