--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,7 @@ services:
       - 'MATOMO_SITE_ID=${FEDISEARCH_MATOMO_SITE_ID}'
       - 'STATS_CACHE_MINUTES=${FEDISEARCH_STATS_CACHE_MINUTES}'
       - 'TZ=${FEDISEARCH_TIMEZONE}'
-      - 'ELASTIC_URL=http://elastic:9200'
-      - 'ELASTIC_PASSWORD=${FEDISEARCH_ELASTIC_PASSWORD}'
+      - 'GRAPHQL_URL=http://localhost:4000/api/graphql'
     networks:
       fedisearch:
     logging: *default-logging
@@ -66,6 +65,7 @@ services:
       - fedisearch-storage
   fedisearch-elasticsearch:
     image: elasticsearch:8.4.1
+    restart: always
     environment:
       - discovery.type=single-node
       - ELASTIC_PASSWORD=${FEDISEARCH_ELASTIC_PASSWORD}
