Added basic authentication and cors config to storage app

--- a/.env.dist
+++ b/.env.dist
@@ -13,3 +13,6 @@ FEDISEARCH_ELASTIC_PASSWORD=
 FEDISEARCH_BANNED_DOMAINS=
 FEDISEARCH_MAX_CRAWLING_DEPTH=
 FEDISEARCH_CRAWLING_VERSION=0
+FEDISEARCH_KEY_ADMIN=
+FEDISEARCH_KEY_CRAWLER=
+FEDISEARCH_CORS_ALLOWED_ORIGINS=*
