Reconfigure project to use local dev enviroment with https using custom CA

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-FEDISEARCH_DOMAIN=
+FEDISEARCH_DOMAIN=fedisearch.localhost
 FEDISEARCH_SEED='mastodon.social'
 FEDISEARCH_MATOMO_URL=
 FEDISEARCH_MATOMO_SITE_ID=
