--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -4,15 +4,23 @@ services:
     networks:
       proxy:
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.fedisearch-storage.rule=Host(`${FEDISEARCH_DOMAIN}`)&&Path(`/api/graphql`)"
-      - "traefik.http.services.fedisearch-storage.ladbalancer.server.port=3000"
+        - "traefik.enable=true"
+        - "traefik.http.routers.fedisearch-storage.rule=Host(`${FEDISEARCH_DOMAIN}`)&&Path(`/api/graphql`)"
+        - "traefik.http.routers.fedisearch-storage.entrypoints=https"
+        - "traefik.http.routers.fedisearch-storage.tls=true"
+        - "traefik.http.routers.fedisearch-storage.tls.certresolver=letsencrypt"
+        - "traefik.http.routers.fedisearch-storage.tls.domains[0].main=${FEDISEARCH_DOMAIN}"
+        - "traefik.http.services.fedisearch-storage.loadbalancer.server.port=3000"
   fedisearch-searcher:
     networks:
       proxy:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.fedisearch-searcher.rule=Host(`${FEDISEARCH_DOMAIN}`)"
+      - "traefik.http.routers.fedisearch-searcher.entrypoints=https"
+      - "traefik.http.routers.fedisearch-searcher.tls=true"
+      - "traefik.http.routers.fedisearch-searcher.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.fedisearch-searcher.tls.domains[0].main=${FEDISEARCH_DOMAIN}"
       - "traefik.http.services.fedisearch-searcher.loadbalancer.server.port=3000"
 
 networks:
