--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,7 @@ services:
     image: elasticsearch:8.4.1
     restart: always
     environment:
+      - xpack.security.enrollment.enabled=true
       - discovery.type=single-node
       - ELASTIC_PASSWORD=${FEDISEARCH_ELASTIC_PASSWORD}
       - 'TZ=${FEDISEARCH_TIMEZONE}'
